--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,6 @@
-$green: #025A42;
+$green: #025a42;
 $dark: #152731;
-$white: #F2F2F2;
-$gold: #D9A441;
+$white: #f2f2f2;
+$gold: #d9a441;
+$gold2: #c99028;
+$white2: #ffffff;
