--- a/src/components/Calculator/style.scss
+++ b/src/components/Calculator/style.scss
@@ -5,32 +5,35 @@
   width: 90%;
   background-color: $green;
   border-radius: 3px;
-  padding-bottom: clamp(20px, 9.3456vw, 80px);
+  padding-bottom: clamp(16px, 7.47648vw, 64px);
 
   &__text {
     color: $white;
-    margin-top: clamp(8px, 3.73824vw, 32px);
+    margin-top: clamp(16px, 7.47648vw, 64px);
     font-weight: 400;
     font-size: clamp(8px, 3.73824vw, 32px);
     font-family: "Open Sans", sans-serif;
-    position: relative;
-    top: clamp(8px, 3.73824vw, 32px);
-    right: clamp(37.5px, 17.523vw, 150px);
+    margin-bottom: clamp(5px, 2.3364vw, 20px);
+    text-align: left;
   }
 
-  &__input {
+  &__inputs {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
   }
 
+  &__input {
+    position: relative;
+  }
+
   &__loc {
+    position: absolute;
     width: clamp(12px, 5.60736vw, 48px);
     height: clamp(12px, 5.60736vw, 48px);
-    position: relative;
-    top: clamp(21px, 9.81288vw, 84px);
-    right: clamp(67.5px, 31.5414vw, 270px);
+    bottom: clamp(8.5px, 3.9718799999999996vw, 34px);
+    left: clamp(5px, 2.3364vw, 20px);
   }
 
   &__item {
@@ -42,47 +45,39 @@
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
     font-size: clamp(8px, 3.73824vw, 32px);
+    text-indent: clamp(-22.5px, -10.5138vw, -90px);
+  }
+
+  &__item-s {
+    padding: clamp(10px, 4.6728vw, 40px);
+    padding-left: clamp(32.5px, 15.186599999999999vw, 130px);
+    padding-right: clamp(32.5px, 15.186599999999999vw, 130px);
+    border: none;
+    text-align: left;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    font-size: clamp(8px, 3.73824vw, 32px);
+    text-indent: clamp(-45px, -21.0276vw, -180px);
   }
 
   &__sort {
-    position: relative;
-    bottom: clamp(21px, 9.81288vw, 84px);
-    left: clamp(65px, 30.373199999999997vw, 260px);
     width: clamp(12px, 5.60736vw, 48px);
     height: clamp(12px, 5.60736vw, 48px);
-    padding-bottom: 0;
+    position: absolute;
+    right: clamp(7.5px, 3.5046vw, 30px);
+    bottom: clamp(8.5px, 3.9718799999999996vw, 34px);
   }
 
-  &__text-ps {
-    color: $white;
-    margin-top: clamp(8px, 3.73824vw, 32px);
-    font-weight: 400;
-    font-size: clamp(8px, 3.73824vw, 32px);
+  &__button {
+    background-color: $gold;
+    border: none;
+    padding: clamp(8px, 3.73824vw, 32px);
+    padding-left: clamp(46px, 21.49488vw, 184px);
+    padding-right: clamp(46px, 21.49488vw, 184px);
     font-family: "Open Sans", sans-serif;
-    position: relative;
-    top: clamp(8px, 3.73824vw, 32px);
-    right: clamp(65px, 30.373199999999997vw, 260px);
-  }
-
-  &__text-date {
-    color: $white;
-    margin-top: clamp(8px, 3.73824vw, 32px);
-    font-weight: 400;
-    font-size: clamp(8px, 3.73824vw, 32px);
-    font-family: "Open Sans", sans-serif;
-    position: relative;
-    top: clamp(8px, 3.73824vw, 32px);
-    right: clamp(51px, 23.83128vw, 204px);
-  }
-
-  &__text-code {
-    color: $white;
-    margin-top: clamp(8px, 3.73824vw, 32px);
-    font-weight: 400;
-    font-size: clamp(8px, 3.73824vw, 32px);
-    font-family: "Open Sans", sans-serif;
-    position: relative;
-    top: clamp(-7.5px, -3.5046vw, -30px);
-    right: clamp(10px, 4.6728vw, 40px);
+    font-weight: 600;
+    font-size: clamp(10px, 4.6728vw, 40px);
+    text-align: center;
+    margin-top: clamp(16px, 7.47648vw, 64px);
   }
 }
