--- a/src/components/Buttons/ButtonMore/style.scss
+++ b/src/components/Buttons/ButtonMore/style.scss
@@ -49,3 +49,22 @@
   background-color: $white;
   color: $green;
 }
+
+
+
+@media screen and (min-width: 1024px) {
+  .simple {
+    width: clamp(130px, 13.5408vw, 520px);
+    padding: clamp(6.5px, 0.67704vw, 26px);
+    border: none;
+    font-family: "Open Sans", sans-serif;
+    font-size: clamp(10px, 1.0416vw, 40px);
+    transition: 0.3s ease;
+    border: 2px solid $green;
+  }
+
+  .simple:hover {
+    background-color: $green;
+    color: $white;
+  }
+}
