--- a/src/screens/AboutScreen/styles/style.scss
+++ b/src/screens/AboutScreen/styles/style.scss
@@ -49,6 +49,8 @@
 
   &__advant {
     background-image: url("../../../assets/Group-43.webp");
+    // background-position: center;
+    // background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
