--- a/src/components/Buttons/ButtonOur/style.scss
+++ b/src/components/Buttons/ButtonOur/style.scss
@@ -32,3 +32,31 @@
 .button__item:hover {
   background-color: $gold2;
 }
+
+@media screen and (min-width: 1024px) {
+  .button {
+    position: relative;
+
+    &__item {
+      width: clamp(130px, 13.5408vw, 520px);
+      padding: clamp(7.5px, 0.7812vw, 30px);
+      background-color: $gold;
+      border: none;
+      color: $dark;
+      font-family: "Open Sans", sans-serif;
+      font-size: clamp(10px, 1.0416vw, 40px);
+
+    }
+
+    &__img {
+      position: absolute;
+      top: clamp(10px, 1.0416vw, 40px);
+      left: clamp(17.5px, 1.8228vw, 70px);
+    }
+
+    &__text {
+      position: relative;
+      left: clamp(3px, 1.40184vw, 12px);
+    }
+  }
+}
