--- a/src/screens/MainScreen/styles/mainscreen.scss
+++ b/src/screens/MainScreen/styles/mainscreen.scss
@@ -4,20 +4,24 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+
   &__content {
     width: 90%;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-weight: 700;
     margin: auto;
     margin-top: clamp(32px, 14.95296vw, 128px);
   }
+
   &__span {
     color: $green;
   }
+
   &__first {
     text-align: center;
     color: $dark;
   }
+
   &__second {
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
@@ -26,9 +30,63 @@
     line-height: clamp(13.5px, 6.30828vw, 54px);
     margin-top: clamp(16px, 7.47648vw, 64px);
   }
+
   &__train {
     width: clamp(214px, 99.99792vw, 856px);
     height: clamp(134px, 62.61552vw, 536px);
     margin-top: clamp(32px, 14.95296vw, 128px);
+  }
+
+  &__train-pc {
+    display: none;
+  }
+}
+
+
+
+@media screen and (min-width: 1024px) {
+  .main {
+    &__content {
+      width: 86.6%;
+    }
+
+    &__first {
+      text-align: left;
+      font-family: 'Rubik', sans-serif;
+      font-size: clamp(26px, 2.70816vw, 104px);
+      width: 55%;
+      font-weight: 700;
+    }
+
+    &__second {
+      text-align: left;
+      font-family: "Open Sans", sans-serif;
+      font-size: clamp(10px, 1.0416vw, 40px);
+      line-height: clamp(16.12px, 1.6790592000000002vw, 64.48px);
+      width: 35%;
+      margin-top: clamp(16px, 1.66656vw, 64px);
+    }
+
+    &__buttons {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      gap: clamp(12.5px, 1.302vw, 50px);
+      margin-bottom: clamp(100px, 10.416vw, 400px);
+    }
+
+    &__train {
+      display: none;
+    }
+
+    &__train-pc {
+      display: flex;
+      width: clamp(519.5px, 54.11112vw, 2078px);
+      height: clamp(274.5px, 28.591920000000002vw, 1098px);
+      position: absolute;
+      left: clamp(432.5px, 45.0492vw, 1730px);
+      bottom: clamp(50px, 5.208vw, 200px);
+      z-index: -1;
+    }
   }
 }
