--- a/src/components/Calculator/style.scss
+++ b/src/components/Calculator/style.scss
@@ -78,20 +78,21 @@
     font-size: clamp(10px, 4.6728vw, 40px);
     text-align: center;
     margin-top: clamp(16px, 7.47648vw, 64px);
+    margin-left: clamp(34px, 15.887519999999999vw, 136px);
   }
 }
 
 @media screen and (min-width: 1024px) {
   .calc {
-
-
-
+    width: clamp(454px, 47.28864vw, 1816px);
+    height: clamp(295px, 30.7272vw, 1180px);
     &__inputs {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
       flex-direction: row;
-
+      width: 80%;
+      margin: auto;
     }
 
     &__text {
@@ -100,9 +101,54 @@
     }
 
     &__item {
-      padding: clamp(7.5px, 3.5046vw, 30px);
-      width: clamp(125px, 58.41vw, 500px);
+      font-size: clamp(8px, 0.83328vw, 32px);
+      font-weight: 400;
+      padding: clamp(10px, 1.0416vw, 40px);
+      width: clamp(175px, 18.228vw, 700px);
+      text-align: left;
+      text-indent: 30px;
+    }
+    &__item-s {
+      font-size: clamp(8px, 0.83328vw, 32px);
+      font-weight: 400;
+      padding: clamp(10px, 1.0416vw, 40px);
+      width: clamp(359px, 37.39344vw, 1436px);
+      text-align: left;
+      text-indent: 10px;
+    }
+    &__button {
+      margin: auto;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      margin-top: clamp(16px, 7.47648vw, 64px);
+      background-color: $gold;
+      border: none;
+      width: clamp(130px, 13.5408vw, 520px);
+      padding: clamp(6.5px, 0.67704vw, 26px);
+      font-family: "Open Sans", sans-serif;
+      font-size: clamp(10px, 1.0416vw, 40px);
+      font-weight: 600;
+
       text-align: center;
+      transition: 0.3s ease;
+      color: $dark;
+    }
+    &__loc {
+      width: clamp(14px, 1.45824vw, 56px);
+      height: clamp(13px, 1.35408vw, 52px);
+      position: absolute;
+      bottom: clamp(9px, 0.93744vw, 36px);
+
+      left: clamp(5px, 0.5208vw, 20px);
+    }
+    &__sort {
+      width: clamp(12px, 1.24992vw, 48px);
+      height: clamp(12px, 1.24992vw, 48px);
+      position: absolute;
+      bottom: clamp(9px, 0.93744vw, 36px);
+
+      right: clamp(5px, 0.5208vw, 20px);
     }
   }
 }
