--- a/src/screens/MainScreen/styles/mainscreen.scss
+++ b/src/screens/MainScreen/styles/mainscreen.scss
@@ -7,7 +7,7 @@
 
   &__content {
     width: 90%;
-    font-family: 'Rubik', sans-serif;
+    font-family: "Rubik", sans-serif;
     font-weight: 700;
     margin: auto;
     margin-top: clamp(32px, 14.95296vw, 128px);
@@ -42,8 +42,6 @@
   }
 }
 
-
-
 @media screen and (min-width: 1024px) {
   .main {
     &__content {
@@ -52,7 +50,7 @@
 
     &__first {
       text-align: left;
-      font-family: 'Rubik', sans-serif;
+      font-family: "Rubik", sans-serif;
       font-size: clamp(26px, 2.70816vw, 104px);
       width: 55%;
       font-weight: 700;
@@ -85,7 +83,7 @@
       height: clamp(274.5px, 28.591920000000002vw, 1098px);
       position: absolute;
       left: clamp(432.5px, 45.0492vw, 1730px);
-      bottom: clamp(50px, 5.208vw, 200px);
+      top: clamp(125px, 13.02vw, 500px);
       z-index: -1;
     }
   }
