--- a/src/components/Calculator/style.scss
+++ b/src/components/Calculator/style.scss
@@ -85,7 +85,8 @@
 @media screen and (min-width: 1024px) {
   .calc {
     width: clamp(454px, 47.28864vw, 1816px);
-    height: clamp(295px, 30.7272vw, 1180px);
+    height: auto;
+
     &__inputs {
       display: flex;
       flex-wrap: wrap;
@@ -108,6 +109,7 @@
       text-align: left;
       text-indent: 30px;
     }
+
     &__item-s {
       font-size: clamp(8px, 0.83328vw, 32px);
       font-weight: 400;
@@ -116,6 +118,7 @@
       text-align: left;
       text-indent: 10px;
     }
+
     &__button {
       margin: auto;
       display: flex;
@@ -134,6 +137,7 @@
       transition: 0.3s ease;
       color: $dark;
     }
+
     &__loc {
       width: clamp(14px, 1.45824vw, 56px);
       height: clamp(13px, 1.35408vw, 52px);
@@ -142,6 +146,7 @@
 
       left: clamp(5px, 0.5208vw, 20px);
     }
+
     &__sort {
       width: clamp(12px, 1.24992vw, 48px);
       height: clamp(12px, 1.24992vw, 48px);
