--- a/src/components/TextAb/style.scss
+++ b/src/components/TextAb/style.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: clamp(32px, 14.95296vw, 128px);
+  // margin-top: clamp(32px, 14.95296vw, 128px);
   background-color: $green;
 
   &__text {
@@ -42,9 +42,10 @@
     font-size: clamp(24px, 2.49984vw, 96px);
     line-height: clamp(28.44px, 2.9623104000000002vw, 113.76px);
   }
+
   .ab__par {
     font-size: clamp(10px, 1.0416vw, 40px);
-    width: 30%;
+    width: 45%;
     font-weight: 400;
   }
 }
