--- a/src/components/Buttons/ButtonMore/style.scss
+++ b/src/components/Buttons/ButtonMore/style.scss
@@ -51,7 +51,7 @@
 @media screen and (min-width: 1024px) {
   .simple {
     width: clamp(130px, 13.5408vw, 520px);
-    padding: clamp(6.5px, 0.67704vw, 26px);
+    padding: clamp(7px, 0.72912vw, 28px);
     border: none;
     font-family: "Open Sans", sans-serif;
     font-size: clamp(10px, 1.0416vw, 40px);
@@ -69,5 +69,6 @@
     padding: clamp(7.5px, 0.7812vw, 30px);
     font-family: "Open Sans", sans-serif;
     font-size: clamp(10px, 1.0416vw, 40px);
+    margin-top: clamp(16px, 1.66656vw, 64px);
   }
 }
