--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -71,15 +71,15 @@
     top: clamp(40px, 4.1664vw, 160px);
     width: clamp(410px, 42.705600000000004vw, 1640px);
     border-radius: 10px;
+    background-color: $white;
     box-shadow: 0px 4px 42px 0px rgba(0, 0, 0, 0.15);
-    height: clamp(236px, 24.58176vw, 944px);
+    height: clamp(225px, 23.436vw, 900px);
 
     &__content {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
       flex-direction: row;
-
     }
 
     &__text {
@@ -100,10 +100,12 @@
       text-align: left;
       text-indent: 15px;
     }
-
+    &__card-s {
+      margin-top: clamp(16px, 1.66656vw, 64px);
+    }
     &__input-s {
       margin-bottom: clamp(2px, 0.20832vw, 8px);
-      width: clamp(370px, 38.5392vw, 1480px);
+      width: clamp(367.5px, 38.278800000000004vw, 1470px);
       padding: clamp(1px, 0.10416vw, 4px);
       font-size: clamp(8px, 0.83328vw, 32px);
       text-align: left;
