--- a/src/components/TextAb/style.scss
+++ b/src/components/TextAb/style.scss
@@ -6,7 +6,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  // margin-top: clamp(32px, 14.95296vw, 128px);
   background-color: $green;
 
   &__text {
@@ -39,13 +38,18 @@
 
 @media screen and (min-width: 1024px) {
   .ab__text {
-    font-size: clamp(24px, 2.49984vw, 96px);
+    font-size: clamp(20px, 2.0832vw, 80px);
     line-height: clamp(28.44px, 2.9623104000000002vw, 113.76px);
+  }
+  .ab__separatop {
+    margin-top: clamp(4px, 0.41664vw, 16px);
   }
 
   .ab__par {
-    font-size: clamp(10px, 1.0416vw, 40px);
-    width: 45%;
+    margin-top: clamp(8px, 0.83328vw, 32px);
+    font-size: clamp(9px, 0.93744vw, 36px);
+    width: 30%;
     font-weight: 400;
+    line-height: clamp(16.12px, 1.6790592000000002vw, 64.48px);
   }
 }
